// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() updates internal packages 1`] = `
[
  {
    "deps": [
      {
        "depName": "@org/a",
        "isInternal": true,
      },
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "foo",
      },
    ],
    "managerData": {
      "lernaJsonFile": "lerna.json",
      "lernaPackages": [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
  },
  {
    "deps": [
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "bar",
      },
    ],
    "managerData": {
      "hasPackageManager": undefined,
      "hasWorkspaces": false,
      "lernaClient": undefined,
      "lernaJsonFile": "lerna.json",
      "npmLock": undefined,
      "packageJsonName": "@org/a",
      "yarnLock": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmrc": undefined,
    "packageFile": "packages/a/package.json",
    "skipInstalls": undefined,
  },
  {
    "managerData": {
      "hasPackageManager": undefined,
      "hasWorkspaces": false,
      "lernaClient": undefined,
      "lernaJsonFile": "lerna.json",
      "npmLock": undefined,
      "packageJsonName": "@org/b",
      "yarnLock": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmrc": undefined,
    "packageFile": "packages/b/package.json",
    "skipInstalls": undefined,
  },
]
`;

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() uses lerna package settings 1`] = `
[
  {
    "deps": [
      {
        "depName": "@org/a",
        "isInternal": true,
      },
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "foo",
      },
    ],
    "managerData": {
      "lernaJsonFile": "lerna.json",
      "lernaPackages": [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
  },
  {
    "deps": [
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "bar",
      },
    ],
    "managerData": {
      "hasPackageManager": undefined,
      "hasWorkspaces": false,
      "lernaClient": undefined,
      "lernaJsonFile": "lerna.json",
      "npmLock": undefined,
      "packageJsonName": "@org/a",
      "yarnLock": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmrc": undefined,
    "packageFile": "packages/a/package.json",
    "skipInstalls": undefined,
  },
  {
    "managerData": {
      "hasPackageManager": undefined,
      "hasWorkspaces": false,
      "lernaClient": undefined,
      "lernaJsonFile": "lerna.json",
      "npmLock": undefined,
      "packageJsonName": "@org/b",
      "yarnLock": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmrc": undefined,
    "packageFile": "packages/b/package.json",
    "skipInstalls": undefined,
  },
]
`;

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() uses yarn workspaces package settings with lerna 1`] = `
[
  {
    "managerData": {
      "lernaClient": "yarn",
      "lernaJsonFile": "lerna.json",
      "lernaPackages": [
        "oldpackages/*",
      ],
      "workspacesPackages": [
        "packages/*",
      ],
    },
    "packageFile": "package.json",
  },
  {
    "managerData": {
      "hasPackageManager": undefined,
      "hasWorkspaces": true,
      "lernaClient": "yarn",
      "lernaJsonFile": "lerna.json",
      "npmLock": undefined,
      "packageJsonName": "@org/a",
      "yarnLock": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmrc": undefined,
    "packageFile": "packages/a/package.json",
    "skipInstalls": undefined,
  },
  {
    "managerData": {
      "hasPackageManager": undefined,
      "hasWorkspaces": true,
      "lernaClient": "yarn",
      "lernaJsonFile": "lerna.json",
      "npmLock": undefined,
      "packageJsonName": "@org/b",
      "yarnLock": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmrc": undefined,
    "packageFile": "packages/b/package.json",
    "skipInstalls": undefined,
  },
]
`;
